--- a/fqs/fqs.html
+++ b/fqs/fqs.html
@@ -65,10 +65,11 @@
 </head>
 
 <body>
+<p>Build: main-b52df42-dirty</p>
   <!--YouTube player div-->
   <div id="player"></div>
   <!-- Page controls -->
-  <div class="controls" style="margin: 5%;">
+  <div style="margin-left: 5%; margin-right: 5%;">
     <em>Controls</em><br>
     <button id="exportButton" onclick="exportScores()">Export</button> <em>Save the scores from this page in
       <code>.fqs</code> text
@@ -172,14 +173,6 @@
       padding-left: 5%;
     }
 
-    details.controls summary {
-      width: 100%;
-      margin-left: 0;
-      margin-right: 0;
-      margin-top: 2em;
-      margin-bottom: 0;
-      padding-left: 0%;
-    }
 
     div.score,
     div.score-toc {
@@ -191,15 +184,9 @@
       padding: 0;
     }
 
-    .edit-button {
-      background: none;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+    .pencil-icon {
       font-size: 16px;
-    }
-
-    .edit-button:hover {
-      background: #f0f0f0;/ad/add
+      fill: green;
     }
 
     /* Font sizes (adjusted dynamically at render time) */
@@ -369,7 +356,7 @@
     let isDirty = false; // global flag that is set when we edit a score and cleared when export the scores
     const bookParameters = {
       // bookParameters control the behavior of the score editor and display.
-      leftX: 7, // Pixel position of the left edge of the score.
+      leftX: 16, // Pixel position of the left edge of the score.
       sideBySide: true, // if true, render scores side-by-side with edit area
       barlineRgx: /:?\|:?/, // regular expression to match barlines
       lyricRgx: /[\p{L}']/u, // regular expression to match lyric alpha characters and apostrophes
@@ -402,21 +389,23 @@
     // classList argument is an array of class names to be added to the text
     // element. The text element is returned.
     function appendSVGTextChild(svg, x, y, textContent, classList) {
-      const text = document.createElementNS("http://www.w3.org/2000/svg", "text");
-      text.setAttribute("x", x);
-      text.setAttribute("y", y);
-      text.textContent = textContent;
-      // Check if this pitch is part of a chord
-      let rotate = 0;
+      const textEl = document.createElementNS("http://www.w3.org/2000/svg", "text");
+      textEl.setAttribute("x", x);
+      textEl.setAttribute("y", y);
+      textEl.textContent = textContent;
+      // Check if this is a chord pitch or the pencil icon.
       if (classList.includes('chord-pitch')) {
-        rotate = 340; // rotate 20 degrees counterclockwise
+        // rotate 20 degrees counterclockwise
+        textEl.setAttribute("transform", `rotate(340, ${x}, ${y})`);
+      } else if (classList.includes('pencil-icon')) {
+        // rotate 90 degrees clockwise
+        textEl.setAttribute("transform", `rotate(90, ${x}, ${y})`);
       }
-      text.setAttribute("transform", `rotate(${rotate}, ${x}, ${y})`);
       if (classList) {
-        text.classList.add(...classList);
+        textEl.classList.add(...classList);
       }
-      svg.appendChild(text);
-      return text;
+      svg.appendChild(textEl);
+      return textEl;
     }
 
     // The LineProblem class holds error and warning messages generated during
@@ -1254,7 +1243,6 @@
           line.setAttribute("stroke-width", 0.5);
           svg.appendChild(line);
         }
-
         // Loop through the pitches and render them at the corresponding 
         // attack locations. It is not an error if the number of pitches
         // is not equal to the number of attack locations because we may
@@ -1858,46 +1846,24 @@
     //  - data is an object containing the score
     function renderScore(wrapper, data) {
       addEditor = (svg) => {
+        // Create a pencil icon that will be used to edit the section.
+        const pencil = appendSVGTextChild(svg, 0, 16, "✎", ['pencil-icon']);
+
         // Creates separate editing area for an SVG section
         const editor = document.createElement('pre');
         editor.classList.add('section-editor');
         editor.setAttribute('contenteditable', 'plaintext-only');
         editor.style.display = 'none';
         wrapper.appendChild(editor);
-        // Add triple tap detection because mobile devices use double-tap for zooming.
-        let tapCount = 0;
-        let lastTap = 0;
 
-        svg.addEventListener('touchend', (e) => {
-          const currentTime = new Date().getTime();
-          const tapLength = currentTime - lastTap;
-
-          if (tapLength < 500) { // Detect taps within 500ms
-            tapCount++;
-          } else {
-            tapCount = 1;
-            // Create and dispatch a click event for single taps
-            const clickEvent = new MouseEvent('click', {
-              bubbles: true,
-              cancelable: true,
-              view: window
-            });
-            e.target.dispatchEvent(clickEvent);
-          }
-
-          lastTap = currentTime;
-
-          if (tapCount === 3) {
-            editor.style.display = editor.style.display === 'none' ? 'block' : 'none';
-            tapCount = 0;
-          }
-        });
-        // Add double-click handler to toggle editor
-        /*
-        svg.addEventListener('dblclick', () => {
+        pencil.addEventListener("click", function (e) {
+          e.stopPropagation();
+          e.preventDefault();
+          e.stopImmediatePropagation();
+          console.log("pencil click");
           editor.style.display = editor.style.display === 'none' ? 'block' : 'none';
-        });
-        */
+          return false;
+        }, true);
         return editor;
       }
       // clear any existing content of the SVG element
@@ -1915,7 +1881,7 @@
 
       // Render the title at the top of the SVG element
       y += 2 * bookParameters.titleFontHeight
-      appendSVGTextChild(svg, bookParameters.leftX, bookParameters.titleFontHeight, data.title, ['title']);
+      appendSVGTextChild(svg, bookParameters.leftX, y, data.title, ['title']);
 
       // Special handling for first SVG's section editor (title block)
       const titleEditor = wrapper.querySelector('.section-editor');
