--- a/fqs/fqs.html
+++ b/fqs/fqs.html
@@ -2060,7 +2060,7 @@
           mainEditor.textContent = fullText;
 
         });
-        editor.addEventListener('dblclick', () => {
+        editor.addEventListener('click', () => {
           // Save editor state
           const activeEditor = document.activeElement;
           // Get index of active editor among siblings
